--- a/package.json
+++ b/package.json
@@ -26,6 +26,5 @@
     "url": "https://github.com/ardhi/bajo-web-mpa-adminlte/issues"
   },
   "homepage": "https://github.com/ardhi/bajo-web-mpa-adminlte#readme",
-  "dependencies": {
-  }
+  "dependencies": {}
 }
