--- a/bajo/config.json
+++ b/bajo/config.json
@@ -1,4 +1,4 @@
 {
   "alias": "adminlte",
-  "dependencies": ["bajo-web-mpa", "bajo-web-static", "bajo-web-mpa-bootstrap"]
+  "dependencies": ["bajo-web-mpa", "bajo-web-static"]
 }
